--- a/garden/ghs2022.tex
+++ b/garden/ghs2022.tex
@@ -170,9 +170,29 @@ Making your own}}
 \section{Puzzle}
 \begin{frame}\begin{textblock}{1}(0,0)6+2=8\end{textblock}\frametitle{{\color{red}\underline{\Large\bf
 }}}\frametitle{\underline{\Large\bf
-Puzzle of the five cups}}
+Invariance}}
 
-\centerline{\huge Invariance}
+\pause
+
+\centerline{\huge Puzzle of the five cups}
+
+\pause
+
+
+\vspace{1cm }
+
+
+
+\centerline{\huge Puzzle of the symbols}
+
+\pause
+
+
+\vspace{1cm }
+
+
+
+\centerline{\huge Magic of Bob Hummer}
 \end{frame}
 
 \section{Magic}
@@ -246,31 +266,17 @@ Instructions}}
 
 \begin{frame}\begin{textblock}{1}(0,0)14+2=16\end{textblock}\frametitle{{\color{red}\underline{\Large\bf
 }}}\frametitle{\underline{\Large\bf
-From high school days}}
-\only<1>{
+Looks familiar?}}
+
 \begin{center}
 \includegraphics[scale=0.5]{image/euler1.pdf}\\
 {\em \underline{}}
 \end{center}
-}%
-\only<2>{
-\begin{center}
-\includegraphics[scale=0.5]{image/euler2.pdf}\\
-{\em \underline{}}
-\end{center}
-}%
-\only<3>{
-\begin{center}
-\includegraphics[scale=0.5]{image/euler3.pdf}\\
-{\em \underline{}}
-\end{center}
-}%
-\only<4>{
-\begin{center}
-\includegraphics[scale=0.5]{image/euler4.pdf}\\
-{\em \underline{}}
-\end{center}
-}%
+
+
+\pause
+
+Draw this in one go without lifting pen and without retracing any line.
 \end{frame}
 \begin{frame}\begin{textblock}{1}(0,0)16+2=18\end{textblock}\frametitle{{\color{red}\underline{\Large\bf
 }}}\frametitle{\underline{\Large\bf
