--- a/garden/ghs2022.tex
+++ b/garden/ghs2022.tex
@@ -4,12 +4,12 @@
 
 \usetheme{default} 
 
-\title[]{MathMagic}
+\title[]{Understanding Mathematics through Puzzles}
 \author[]{Arnab Chakraborty}
 \institute{%
 Indian Statistical Institute
 }
-\date{Oct 28, 2017}
+\date{Jun 27, 2022}
 
 \input{notesornot.spec}
 \begin{document}
@@ -18,6 +18,7 @@ Indian Statistical Institute
 
 
 
+\frame{\titlepage}
 \begin{frame}\begin{textblock}{1}(0,0)0+2=2\end{textblock}\frametitle{{\color{red}\underline{\Large\bf
 }}}\frametitle{\underline{\Large\bf
 Get off the earth!}}
